--- a/src/components/registerForm/registerForm.css
+++ b/src/components/registerForm/registerForm.css
@@ -1,68 +1,86 @@
-.register--wrapper {
-    width: 400px;
-    margin: 0 auto;
+.auth--wrapper {
+  width: 400px;
+  margin: 0 auto;
 }
-.register_form--wrap {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 16px 24px 24px;
-    background-color: #fff;
-    margin-top: 64px;
-    border-radius: 4px;
-    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 
-                0px 1px 1px 0px rgb(0 0 0 / 14%), 
-                0px 1px 3px 0px rgb(0 0 0 / 12%);
+.auth_form--wrap {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 16px 24px 24px;
+  background-color: #fff;
+  margin-top: 64px;
+  border-radius: 4px;
+  box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
+    0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 }
-.register__form__title {
-    margin: 0 0 16px;
-    font-size: 32px;
-    font-weight: 500;
-    line-height: 1.3;
-    color: #222;
-    text-align: center;
+.auth__form__title {
+  margin: 0 0 16px;
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 1.3;
+  color: #222;
+  text-align: center;
 }
-.register__form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+.auth__form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
-.register__item {
-    display: inline-flex;
-    padding: 0;
-    vertical-align: top;
-    width: 100%;
-    position: relative;
-    margin-bottom: 24px;
+.auth__item {
+  display: inline-flex;
+  padding: 0;
+  vertical-align: top;
+  width: 100%;
+  position: relative;
+  margin-bottom: 24px;
 }
-.register__label {
-    position: absolute;
-    bottom: 10.5px;
-    font-size: 16px;
-    line-height: 1.75;
-    letter-spacing: 0.2px;
+.auth__label {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-size: 16px;
+  line-height: 1.75;
+  letter-spacing: 0.2px;
+  transform: translate(0, -5px) scale(1);
+  transition: color 300ms cubic-bezier(0, 0, 0.2, 1) 0ms,
+    transform 300ms cubic-bezier(0, 0, 0.2, 1) 0ms;
 }
-.register__input {
-    width: 100%;
-    padding: 10.5px 12px;
-    font-size: 16px;
-    line-height: 1.75px;
-    letter-spacing: 0.2px;
-    border: none;
-    border-bottom: 1px solid #222;
+.auth_require {
+  color: red;
 }
-.register__button {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    margin: 8px 0 10px;
-    padding: 6px 16px;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.75;
-    letter-spacing: 0.2px;
-    text-transform: uppercase;
-    text-align: center;
-    outline: 0;
+.auth__active {
+    color: #3f51b5;
+  transform: translate(0, -24px) scale(0.75);
+  transform-origin: top left;
+}
+.auth__input {
+  width: 100%;
+  padding: 10.5px 12px;
+  font-size: 16px;
+  line-height: 1.75px;
+  letter-spacing: 0.2px;
+  border: none;
+  border-bottom: 2px solid #222;
+  outline: none;
+  transition: border-color 300ms cubic-bezier(0, 0, 0.2, 1) 0ms;;
+}
+.auth__input:focus {
+  border-color: #3f51b5;
+}
+.auth__button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  margin: 8px 0 10px;
+  padding: 6px 16px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.75;
+  letter-spacing: 0.2px;
+  text-transform: uppercase;
+  text-align: center;
+  outline: 0;
+  color: #fff;
+  background-color: #3f51b5;
 }
