--- a/src/components/appBar/appBar.css
+++ b/src/components/appBar/appBar.css
@@ -3,6 +3,12 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 16px;
+  background: #63b5d6;
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
     0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+}
+
+.nav--wrapper {
+  display: flex;
+  justify-content: space-between;
 }
