--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -2,10 +2,11 @@
     display: inline-block;
     text-decoration: none;
     padding: 12px;
+    font-size: 16px;
     font-weight: 700;
-    color: #2a363b;
+    color: #fff;
   }
   
   .nav__link.active {
-    color: #e84a5f;
+    color: #3f51b5;
   }
