--- a/src/components/registerForm/registerForm.css
+++ b/src/components/registerForm/registerForm.css
@@ -62,25 +62,8 @@
   border: none;
   border-bottom: 2px solid #222;
   outline: none;
-  transition: border-color 300ms cubic-bezier(0, 0, 0.2, 1) 0ms;;
+  transition: border-color 300ms cubic-bezier(0, 0, 0.2, 1) 0ms;
 }
 .auth__input:focus {
   border-color: #3f51b5;
-}
-.auth__button {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-  margin: 8px 0 10px;
-  padding: 6px 16px;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.75;
-  letter-spacing: 0.2px;
-  text-transform: uppercase;
-  text-align: center;
-  outline: 0;
-  color: #fff;
-  background-color: #3f51b5;
 }
