--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -1,3 +1,9 @@
+.notFound--wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60vh;
+}
 .notFound {
     color: #222;
     font-size: 40px;
