--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,3 +1,6 @@
+.main__nav {
+
+}
 .nav__link {
     display: inline-block;
     text-decoration: none;
@@ -9,4 +12,12 @@
   
   .nav__link.active {
     color: #3f51b5;
+  }
+
+  /* Responsive */
+  @media(max-width: 767px) {
+    .main__nav {
+      display: flex;
+      flex-direction: column;
+    }
   }
