Done firebase auth add confirm password for reg Form and Do validation for forms add logic for constant routes

--- a/src/components/AuthNav/AuthNav.css
+++ b/src/components/AuthNav/AuthNav.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    margin-left: 32px;
 }
 .auth__nav__link {
     text-decoration: none;
