--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -1,3 +1,12 @@
+.wrapper_loader {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background-color: #222222;
+  z-index: 1000;
+}
 .loader {
   display: flex;
   width: 100%;
