--- a/src/components/header/appBar/appBar.css
+++ b/src/components/header/appBar/appBar.css
@@ -1,11 +1,11 @@
 .header {
   display: flex;
   position: relative;
-  justify-content: space-between;
-  align-items: center;
+  flex-shrink: 0;
   background: #63b5d6;
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
     0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+    z-index: 1000;
 }
 
 .nav--wrapper {
