add filter and logic for AllNotes page

--- a/src/components/header/userMenu/userMenu.css
+++ b/src/components/header/userMenu/userMenu.css
@@ -29,3 +29,10 @@
 .logout__button:hover {
     background-color: #303f9f;
 }
+
+@media(max-width: 480px) {
+    .logout--wrapper {
+        flex-direction: column-reverse;
+        gap: 5px;
+    }
+}
