--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 @import-normalize; /* bring in normalize.css styles */
+* {
+  box-sizing: border-box;
+  max-width: 100%;
+}
 
 body {
   width: 100%;
