--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -4,11 +4,14 @@
   width: 100%;
   height: 100%;
   top: 0;
-  background-color: #222222;
   z-index: 1000;
+  background: #222;
 }
 .loader {
   display: flex;
-  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   justify-content: center;
 }
