--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,11 @@ code {
     monospace;
 }
 
+input:-webkit-autofill {
+    -webkit-box-shadow:0 0 0 50px #fff inset;
+    -webkit-text-fill-color: #222;
+}
+
 #root {
   min-height: 100vh;
   display: flex;
