--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   max-width: 100%;
 }
 
+
 body {
   width: 100%;
   margin: 0;
@@ -13,7 +14,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+#root {
+  height: 100vh;
+}
 main {
   flex-grow: 1;
 }
@@ -30,8 +33,26 @@ code {
 }
 
 #root {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: stretch;
 }
+
+
+.container-iframe {
+  display: grid;
+  grid-template-columns: 70% auto;
+  flex-grow: 1;
+  height: calc(100vh - 130px);
+}
+
+.main-container {
+  height: calc(100vh - 60px);
+  display: flex;
+  flex-direction: column;
+}
+.header-page-typography {
+  height: 100%;
+  overflow: hidden;
+}
+
