--- a/src/components/header/AuthNav/AuthNav.css
+++ b/src/components/header/AuthNav/AuthNav.css
@@ -1,15 +1,20 @@
 .auth__nav--wrap {
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-left: 32px;
+    justify-content: flex-end;
 }
 .auth__nav__link {
     text-decoration: none;
     display: inline-block;
-    padding: 8px 12px;
+    padding: 10px 18px;
+    font-family: inherit;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 1.2;
     color: #fff;
-    border: 1px solid #fff;
+    background: rgba(255, 255, 255, 0.25);
+    border-radius: 7px;
+    cursor: pointer;
     transition: background 300ms linear;
 }
 .auth__nav__link.active {
@@ -17,5 +22,5 @@
     background: #fff;
 }
 .auth__nav__link:hover {
-    background: rgb(214, 101, 25);
+    background: #3f51b5;
 }
