--- a/src/components/header/appBar/appBar.css
+++ b/src/components/header/appBar/appBar.css
@@ -2,15 +2,16 @@
   display: flex;
   position: relative;
   flex-shrink: 0;
-  background: #63b5d6;
+  background: #42A4CB;
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
     0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
-    z-index: 1000;
+  z-index: 1000;
 }
 
 .nav--wrapper {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 190px 1fr;
+  padding: 14px 0;
 }
 .navigation {
   display: flex;
@@ -18,10 +19,16 @@
   align-items: center;
 }
 .mobile__menu--wrapper {
-  display: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  background: #3D8AA9;
 }
 .mobile__menu__btn {
-  display: none;
+  display: flex;
   border: none;
   background: transparent;
   cursor: pointer;
@@ -30,10 +37,17 @@
   animation: cross 0.3s;
 }
 .mobile__menu {
-  display: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
   height: 0;
   overflow: hidden;
   color: #fff;
+  background: #000;
   transition: height 300ms ease-in-out;
 }
 .mobile__menu--wrap {
@@ -45,6 +59,7 @@
 .mobile__menu__icon {
   width: 40px;
   height: 40px;
+  color: #fff;
 }
 
 /* Frames */
@@ -65,28 +80,9 @@
     transform: rotate(360deg);
   }
 }
-
 /* Responsive */
-@media(max-width: 767px) {
-  .navigation {
-    display: none;
-  }
-  .mobile__menu--wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .mobile__menu__btn {
-    display: flex;
-  }
-  .mobile__menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background: #000;
+@media(max-width: 480px) {
+  .nav--wrapper {
+    grid-template-columns: 1fr 150px 1fr;
   }
 }
