--- a/src/components/header/userMenu/userMenu.css
+++ b/src/components/header/userMenu/userMenu.css
@@ -1,38 +1,53 @@
 .logout--wrapper {
     display: flex;
     align-items: center;
-    margin-left: 32px;
+    justify-content: flex-end;
 }
 .logout__username {
     margin: 0;
-    font-size: 12px;
-    font-weight: 500;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
     line-height: 1.2;
 }
 .logout__button {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    margin-left: 10px;
-    padding: 8px 12px;
-    font-size: 12px;
-    font-weight: 500;
+    margin-left: 28px;
+    padding: 10px 18px;
+    font-family: inherit;
+    font-style: normal;
+    font-size: 16px;
     line-height: 1.2;
-    text-transform: uppercase;
     color: #fff;
-    background-color: #3f51b5;
+    background: rgba(255, 255, 255, 0.25);
     border: none;
+    border-radius: 7px;
     cursor: pointer;
     transition: all 300ms cubic-bezier(0, 0, 0.2, 1);
 
+}
+.logout__button__icon {
+    margin-left: 12px;
 }
 .logout__button:hover {
     background-color: #303f9f;
 }
 
-@media(max-width: 480px) {
-    .logout--wrapper {
-        flex-direction: column-reverse;
-        gap: 5px;
+/* Responsive */
+
+@media(max-width: 991px) {
+    .logout__username {
+        display: none;
+    }
+    .logout__button {
+        margin-left: 0;
+    }
+    .logout__button span {
+        display: none;
+    }
+    .logout__button__icon {
+        margin-left: 0;
     }
 }
