--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,8 @@ body {
 }
 main {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 header,
@@ -48,7 +50,7 @@ input:-webkit-autofill {
   display: grid;
   grid-template-columns: 70% auto;
   flex-grow: 1;
-  height: calc(100vh - 130px);
+  height: calc(100vh - 140px);
 }
 
 .main-container {
