--- a/src/components/buttons/arrow/style.css
+++ b/src/components/buttons/arrow/style.css
@@ -4,8 +4,8 @@
   justify-content: center;
   border-radius: 50%;
   cursor: pointer;
-  width: 15px;
-  height: 15px;
+  border: none;
+  background-color: inherit;
 }
 .arrow_button svg {
   width: 100%;
