--- a/src/components/filter/filter.css
+++ b/src/components/filter/filter.css
@@ -9,7 +9,7 @@
     top: 5px;
     left: 35px;
     padding: 5px;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 400;
     line-height: 1;
     letter-spacing: 0.2px;
@@ -36,7 +36,10 @@
     display: flex;
     position: absolute;
     top: 35px;
-    left: 24px;
+    left: 7px;
+}
+.filter__icon--wrap svg {
+  fill: #7f8ff4;
 }
 .filter__icon {
     width: 24px;
