--- a/src/components/header/userMenu/style.css
+++ b/src/components/header/userMenu/style.css
@@ -32,7 +32,7 @@
     margin-left: 12px;
 }
 .logout__button:hover {
-    background-color: #303f9f;
+    background-color: rgba(255, 255, 255, 0.35);
 }
 
 /* Responsive */
