--- a/src/components/modal/confirm/style.css
+++ b/src/components/modal/confirm/style.css
@@ -28,6 +28,7 @@
 .confirm_modal .confirm_modal__content {
   padding: 60px 40px 40px;
   font-size: 20px;
+  color: black;
   font-weight: 600;
 }
 
