--- a/src/components/header/appBar/style.css
+++ b/src/components/header/appBar/style.css
@@ -2,7 +2,10 @@
   display: flex;
   position: relative;
   flex-shrink: 0;
-  background: #42A4CB;
+  background: #fff;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: 500;
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
     0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
   z-index: 1000;
@@ -25,13 +28,19 @@
   width: 42px;
   height: 42px;
   border-radius: 50%;
-  background: #3D8AA9;
+  overflow: hidden;
 }
 .mobile__menu__btn {
   display: flex;
   border: none;
   background: transparent;
   cursor: pointer;
+  background: #2d72dc;
+  transition: background 300ms linear;
+}
+.mobile__menu__btn:hover,
+.mobile__menu__btn:focus {
+  background: #4381e0;
 }
 .mobile__menu__btn.is-animating .mobile__menu__icon {
   animation: cross 0.3s;
@@ -45,10 +54,10 @@
   left: 0;
   width: 100%;
   height: 0;
-  overflow: hidden;
   color: #fff;
   background: #000;
   transition: height 300ms ease-in-out;
+  overflow: hidden;
 }
 .mobile__menu--wrap {
   display: flex;
@@ -81,7 +90,7 @@
   }
 }
 /* Responsive */
-@media(max-width: 480px) {
+@media (max-width: 480px) {
   .nav--wrapper {
     grid-template-columns: 1fr 150px 1fr;
   }
