--- a/src/components/header/userMenu/style.css
+++ b/src/components/header/userMenu/style.css
@@ -1,53 +1,52 @@
 .logout--wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 .logout__username {
-    margin: 0;
-    color: #fff;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.2;
+  margin: 0;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.2;
 }
 .logout__button {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 28px;
-    padding: 10px 18px;
-    font-family: inherit;
-    font-style: normal;
-    font-size: 16px;
-    line-height: 1.2;
-    color: #fff;
-    background: rgba(255, 255, 255, 0.25);
-    border: none;
-    border-radius: 7px;
-    cursor: pointer;
-    transition: all 300ms cubic-bezier(0, 0, 0.2, 1);
-
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 28px;
+  padding: 10px 18px;
+  font-family: inherit;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 1.2;
+  color: #fff;
+  background: #2d72dc;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+  transition: all 300ms cubic-bezier(0, 0, 0.2, 1);
 }
 .logout__button__icon {
-    margin-left: 12px;
+  margin-left: 12px;
 }
 .logout__button:hover {
-    background-color: rgba(255, 255, 255, 0.35);
+  background-color: #4381e0;
 }
 
 /* Responsive */
 
-@media(max-width: 991px) {
-    .logout__username {
-        display: none;
-    }
-    .logout__button {
-        margin-left: 0;
-    }
-    .logout__button span {
-        display: none;
-    }
-    .logout__button__icon {
-        margin-left: 0;
-    }
+@media (max-width: 991px) {
+  .logout__username {
+    display: none;
+  }
+  .logout__button {
+    margin-left: 0;
+  }
+  .logout__button span {
+    display: none;
+  }
+  .logout__button__icon {
+    margin-left: 0;
+  }
 }
