--- a/src/components/typography/style.css
+++ b/src/components/typography/style.css
@@ -9,24 +9,24 @@
 
 .typography-component .action-item {
   cursor: pointer;
-  color: #3f51b5;
+  color: #2d72dc;
 }
 /*Start Settings*/
 :root {
-  --main_color: #0D5D9A;
-  --second_color: #FDC82D;
-  --post_title_color: #293E51;
-  --article_bg_color: #F7F9FD;
-  --text_color:  #333333;
+  --main_color: #0d5d9a;
+  --second_color: #fdc82d;
+  --post_title_color: #293e51;
+  --article_bg_color: #f7f9fd;
+  --text_color: #333333;
   --font: 'Lexend Deca', sans-serif;
 }
-body{
+body {
   font: 300 17px/1.5 var(--font);
   color: var(--text_color);
   margin: 0;
   -webkit-font-smoothing: antialiased;
 }
-p{
+p {
   margin-block-start: 1.4em;
   margin-block-end: 1.4em;
 }
@@ -61,7 +61,7 @@ h6 {
   font: 600 18px var(--font);
   color: var(--text_color);
 }
-@media(max-width: 767px) {
+@media (max-width: 767px) {
   h1 {
     font-size: 34px;
   }
@@ -74,7 +74,7 @@ h6 {
   body {
     font-size: 14px;
   }
-  p{
+  p {
     margin-block-start: 1em;
     margin-block-end: 1em;
   }
