--- a/src/components/fields/InputButton/style.css
+++ b/src/components/fields/InputButton/style.css
@@ -12,7 +12,7 @@
   padding: 0;
   transition: all 200ms ease-in;
   cursor: pointer;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .left_label_input .btn--primary {
