--- a/src/components/header-page/style.css
+++ b/src/components/header-page/style.css
@@ -10,7 +10,7 @@
 
 .header-page__title {
   font-size: 20px;
-  font-family: Roboto;
+  font-family: Quicksand;
 }
 .header-page__select {
   height: 46px;
