--- a/src/components/buttons/base/style.css
+++ b/src/components/buttons/base/style.css
@@ -86,7 +86,7 @@
   border-radius: 7px;
   color: #fff;
   border: solid 1px #42A4CB;
-  background: #EC3718 !important;
+  background: #fb3b1e !important;
   white-space: nowrap;
 
 }
