--- a/src/components/fields/switch/style.css
+++ b/src/components/fields/switch/style.css
@@ -21,7 +21,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #fff;
+  background-color: #42A4CB;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -50,7 +50,7 @@
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
-  background-color: #fff;
+  background-color: #9FE494;
   opacity: 1;
 }
 .switch_input + .slider:before {
