--- a/src/components/buttons/base/style.css
+++ b/src/components/buttons/base/style.css
@@ -1,7 +1,12 @@
 .base_button {
+  background-color: #ffffff;
+  border-radius: 7px;
+  color: #353535;
+  border: solid 1px #42a4cb;
+  white-space: nowrap;
   position: relative;
   backface-visibility: hidden;
-  background-color: #2d72dc;
+  background-color: #42a4cb;
   border-radius: 6px;
   border-width: 0;
   box-shadow: rgba(50, 50, 93, 0.1) 0 0 0 1px inset,
@@ -16,7 +21,6 @@
   outline: none;
   overflow: hidden;
   padding: 0 25px;
-  position: relative;
   text-align: center;
   text-transform: none;
   transform: translateZ(0);
@@ -29,7 +33,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 5px;
 }
 .base_button.full-screen-btn {
   position: absolute;
@@ -44,7 +47,7 @@
   background-color: #acabac;
 }
 .base_button__white {
-  background-color: #2d72dc;
+  background-color: #ffffff;
   border-radius: 7px;
   color: #353535;
   border: solid 1px #42a4cb;
