--- a/src/components/header/userMenu/style.css
+++ b/src/components/header/userMenu/style.css
@@ -25,6 +25,7 @@
   border-radius: 7px;
   cursor: pointer;
   transition: all 300ms cubic-bezier(0, 0, 0.2, 1);
+  font-family: inherit;
 }
 .logout__button__icon {
   margin-left: 12px;
